# irnas-pca9554-driver

./: CHANGELOG.md  CMakeLists.txt  README.md  east.yml  west.yml
drivers/: CMakeLists.txt  Kconfig
drivers/gpio/: CMakeLists.txt  Kconfig.pca9554  gpio_pca9554.c
dts/bindings/: irnas,pca9554.yaml
samples/basic/: CMakeLists.txt  app.overlay
samples/basic/src/: main.c
